0.1.7
    - Added $face.forall-glyphs method. Ported from Perl 5
      version 0.0.7.
    - Fixed $glyph.name method on unmapped glyphs.
0.1.6
    Fix t/10metrics_postscript.t to pass on FreeType2 2.9.1+.
0.1.5
    Fix protoypes for FT_Get_First_Char, FT_Get_Next_Char
0.1.4
    - Fix premature destruction of Font-Library
      e.g. this is dangerous:
           my $vera = Font::FreeType.new.face('t/fonts/Vera.ttf');
      The anonymous font library instance could get destroyed also
      destroying the underlying struct for the still-live $vera face.

      Added a $.ft-lib property to face that references
      to library class to avoid it's destruction.

      Also added $.face property to BitMap, CharMap,
      Glyph and GlyphImage to indirectly keep the library
      from being destroyed if any of these sub-objects
      exist.
      
0.1.3
    - Renamed C wrapper functions and sources ft_* -> ft6_*.
0.1.2
    - Fixed Font::FreeType::Native.Str on Rakudo bleed 2018.11+
0.1.1
    - Move resources/lib to resources/libraries. Build improvements.
      See https://gist.github.com/ugexe/ec5fe910d3187c46a4f8e634423cb4ea
0.1.0
    - Perl 6.d syntax fix
0.0.9
    - $face.charmaps now returns a Slip (was Array)
0.0.8
    - adjust to latest zef. Return True from Build method
0.0.7
    - Fixed compilation warning on latest Rakudo
    - Fix problematic test (issue #1)

0.0.6
    - Fixed compilation error on latest Rakudo

0.0.5
    - Rename examples/font-say.pl bin/font-say
    - Don't call FT_Reference_Face, which will cause memory leakage.

0.0.4
    - Add missing build dependency on LibraryMake

0.0.3
    - Documentation tweaks

0.0.2
    - Fix Build.pm META6.

0.0.1
    - Initial release